# mijia_front

./: LICENSE  README.md  launcher.py  main.py  mijia_iot.spec  pyproject.toml
static/: index.html
