[project]
name = "mijia-front"
version = "0.1.0"
description = "Web dashboard for Xiaomi Mi Home devices via mijiaAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "mijiaapi>=3.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false

[dependency-groups]
dev = [
    "cairosvg>=2.9.0",
    "pyinstaller>=6.19.0",
]
